# flora

./: .gitignore  Dockerfile  Makefile  docker  dune-project  dune-workspace  flora  readme.md
src/app/: dune  main.ml
src/lib/: common.ml  core.ml  dune  edit.ml  edit1.ml  fuzzy.ml  lang.ml  main.ml  simpl_.ml  sql_.ml  types.ml
